Bug 1089040 - Fix HWC opacity check for largers with complex regions. r=sotaro

--HG--
extra : rebase_source : e80c240766a9e44e738e706b02ba65dd3e74fd83